--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 {"@type":"WebSite","url":"https://vijayant.page/24spoke.tech/","headline":"24spoke.tech","name":"24spoke.tech","description":"https://24spoke.tech website","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/24spoke.tech/assets/css/style.css?v=9b2169b25232b93958dc3e27ec238d609ac56773">
+    <link rel="stylesheet" href="/assets/css/style.css">
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
